# googly-eyes

./: .gitignore  Dockerfile  README.md  app.py  config.yml  gunicorn.conf.py  pyproject-poetry.toml  pyproject.toml
model/: cascade_classifier.py
src/: app.py  cascade_classifier.py  config.py  errors.py  googly_eyes.py
src/model/: cascade_classifier.py
tests/: conftest.py  test_app.py  test_cascade_classifier.py  test_config.py  test_googly_eyes.py
tests/model/: test_cascade_classifier.py
tests/resources/: config.yml
