[tool.poetry]
name = "googly-eyes"
version = "0.1.0"
description = "Googly Eyes"
authors = ["Daniel Adriano <daniel.dadriano@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
opencv-python = "^4.9.0.80"
numpy = "^1.26.3"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
