[project]
name = "googly-eyes"
version = "0.1.0"
description = "Googly Eyes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dacite==1.8.1",
    "flask==3.0.1",
    "gunicorn==21.2.0",
    "numpy==1.26.3",
    "opencv-python==4.9.0.80",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pyyaml==6.0.1",
]
